--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
   "devDependencies": {
     "builder": "^2.9.1",
     "builder-ts-library-dev": "~0.0.6",
-    "reflect-metadata": "^0.1.3"
+    "reflect-metadata": "^0.1.3",
+    "retax": "^1.0.0-alpha.1"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.3",
+    "retax": "^1.0.0-alpha.1",
     "retax-core": "^1.0.0-alpha.1",
     "retax-di": "^1.0.0-alpha.0",
     "retax-utils": "^1.0.0-alpha.1"
