--- a/package.json
+++ b/package.json
@@ -41,21 +41,21 @@
     "inversify": "^2.0.0-beta.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.6.1",
-    "retax-core": "^1.1.0-alpha.0",
-    "retax-di": "^1.1.0-alpha.0",
-    "retax-utils": "^1.0.0-alpha.1"
+    "retax-core": "^1.1.0",
+    "retax-di": "^1.1.0",
+    "retax-utils": "^1.0.0"
   },
   "devDependencies": {
     "builder": "^2.9.1",
     "builder-ts-library-dev": "~0.0.6",
     "reflect-metadata": "^0.1.3",
-    "retax": "^1.1.0-alpha.0"
+    "retax": "^1.1.0"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.3",
-    "retax": "^1.1.0-alpha.0",
-    "retax-core": "^1.1.0-alpha.0",
-    "retax-di": "^1.1.0-alpha.0",
-    "retax-utils": "^1.0.0-alpha.1"
+    "retax": "^1.1.0",
+    "retax-core": "^1.1.0",
+    "retax-di": "^1.1.0",
+    "retax-utils": "^1.0.0"
   }
 }
