chore(package): Update inversify

--- a/package.json
+++ b/package.json
@@ -38,25 +38,25 @@
   "dependencies": {
     "builder-ts-library": "~0.0.6",
     "hoist-non-react-statics": "^1.0.5",
-    "inversify": "^2.0.0-beta.2",
-    "inversify-dts": "^1.0.0",
+    "inversify": "2.0.0-beta.10",
+    "inversify-dts": "1.0.8",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.6.1",
-    "retax-core": "^1.1.0",
-    "retax-di": "^1.1.0",
-    "retax-utils": "^1.0.0"
+    "retax-core": "^1.2.1",
+    "retax-di": "^1.1.2",
+    "retax-utils": "^1.0.2"
   },
   "devDependencies": {
     "builder": "^2.9.1",
     "builder-ts-library-dev": "~0.0.6",
     "reflect-metadata": "^0.1.3",
-    "retax": "^1.1.0"
+    "retax": "^1.1.4"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.3",
-    "retax": "^1.1.0",
-    "retax-core": "^1.1.0",
-    "retax-di": "^1.1.0",
-    "retax-utils": "^1.0.0"
+    "retax": "^1.1.4",
+    "retax-core": "^1.2.1",
+    "retax-di": "^1.1.2",
+    "retax-utils": "^1.0.2"
   }
 }
